# bot_doxologia

./: README.md  manage.py  pyproject.toml  test.ipynb
bot_doxologia/: asgi.py  settings.py  urls.py  wsgi.py
rpa_doxologia/: apps.py  googleSheetsSDK.py
