[project]
name = "bot-doxologia"
version = "0.1.0"
description = ""
authors = [
    {name = "Maychell"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "gspread (>=6.2.0,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
